refactor(dto) : move brain from dto to service