@@ -8,98 +8,36 @@ import com.myssteriion.blindtest.model.common.Round;
 import com.myssteriion.blindtest.model.common.Theme;
 import com.myssteriion.blindtest.model.common.roundcontent.impl.ClassicContent;
 import com.myssteriion.blindtest.model.dto.ProfileDTO;
-import com.myssteriion.utils.test.TestUtils;
 import org.junit.Assert;
 import org.junit.Test;
 
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 
 public class GameTest extends AbstractTest {
     
     @Test
-    public void constructor() {
-        
-        List<Player> players = Arrays.asList(
-                new Player(new ProfileDTO("name")),
-                new Player(new ProfileDTO("name1")));
-        
-        Duration duration = Duration.NORMAL;
-        List<Theme> themes = Arrays.asList(Theme.ANNEES_60, Theme.ANNEES_70);
-        List<Effect> effects = Arrays.asList(Effect.NONE, Effect.SPEED);
-        
-        try {
-            new Game(null, duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
-            Assert.fail("Doit lever une IllegalArgumentException car un champ est KO.");
-        }
-        catch (IllegalArgumentException e) {
-            TestUtils.verifyException(new IllegalArgumentException("Le champ 'players' est obligatoire."), e);
-        }
-        
-        try {
-            new Game(new HashSet<>(players), null, null, null, ConnectionMode.OFFLINE, roundContentProperties);
-            Assert.fail("Doit lever une IllegalArgumentException car un champ est KO.");
-        }
-        catch (IllegalArgumentException e) {
-            TestUtils.verifyException(new IllegalArgumentException("Le champ 'duration' est obligatoire."), e);
-        }
-        
-        try {
-            new Game(new HashSet<>(), duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
-            Assert.fail("Doit lever une IllegalArgumentException car un champ est KO.");
-        }
-        catch (IllegalArgumentException e) {
-            TestUtils.verifyException(new IllegalArgumentException("Le champ 'players' est obligatoire."), e);
-        }
-        
-        
-        Game game = new Game(new HashSet<>(players), duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
-        Assert.assertEquals( players, game.getPlayers() );
-        Assert.assertEquals( duration, game.getDuration() );
-        Assert.assertEquals( 0, game.getNbMusicsPlayed() );
-        Assert.assertEquals( 0, game.getNbMusicsPlayedInRound() );
-        Assert.assertEquals( Round.CLASSIC, game.getRound() );
-        Assert.assertEquals( Theme.getSortedTheme(), game.getThemes() );
-        Assert.assertEquals( Effect.getSortedEffect(), game.getEffects() );
-        Assert.assertEquals( ConnectionMode.OFFLINE, game.getConnectionMode() );
-        
-        
-        players = Arrays.asList(
-                new Player(new ProfileDTO("name4")),
-                new Player(new ProfileDTO("name1")),
-                new Player(new ProfileDTO("name3")),
-                new Player(new ProfileDTO("name2")));
-        
-        game = new Game(new HashSet<>(players), duration, themes, effects, ConnectionMode.OFFLINE, roundContentProperties);
-        Assert.assertEquals( players.get(1), game.getPlayers().get(0) );
-        Assert.assertEquals( players.get(3), game.getPlayers().get(1) );
-        Assert.assertEquals( players.get(2), game.getPlayers().get(2) );
-        Assert.assertEquals( players.get(0), game.getPlayers().get(3) );
-    }
-    
-    @Test
     public void getterSetter() {
         
         List<Player> players = Arrays.asList(
-                new Player(new ProfileDTO("name")),
-                new Player(new ProfileDTO("name1")));
+                new Player(new ProfileDTO().setName("name")),
+                new Player(new ProfileDTO().setName("name1")));
         Duration duration = Duration.NORMAL;
         List<Theme> themes = Arrays.asList(Theme.ANNEES_60, Theme.ANNEES_70);
         List<Effect> effects = Arrays.asList(Effect.NONE, Effect.SPEED);
         
-        Game game = new Game(new HashSet<>(players), duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
+        Game game = new Game(players, duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
         Assert.assertEquals( players, game.getPlayers() );
         Assert.assertEquals( duration, game.getDuration() );
-        Assert.assertEquals( Effect.getSortedEffect(), game.getEffects() );
+        Assert.assertNull( game.getEffects() );
         Assert.assertEquals( ConnectionMode.OFFLINE, game.getConnectionMode() );
         Assert.assertEquals( 0, game.getNbMusicsPlayed() );
         Assert.assertEquals( 0, game.getNbMusicsPlayedInRound() );
         Assert.assertEquals( Round.CLASSIC, game.getRound() );
-        Assert.assertEquals( Theme.getSortedTheme(), game.getThemes() );
+        Assert.assertNull( game.getThemes() );
         
-        game = new Game(new HashSet<>(players), duration, themes, effects, ConnectionMode.ONLINE, roundContentProperties);
+        game = new Game(players, duration, themes, effects, ConnectionMode.ONLINE, roundContentProperties);
         Assert.assertEquals( players, game.getPlayers() );
         Assert.assertEquals( duration, game.getDuration() );
         Assert.assertEquals( themes, game.getThemes() );
@@ -114,45 +52,45 @@ public class GameTest extends AbstractTest {
     public void toStringAndEquals() {
         
         List<Player> players = Arrays.asList(
-                new Player(new ProfileDTO("name")),
-                new Player(new ProfileDTO("name1")));
+                new Player(new ProfileDTO().setName("name")),
+                new Player(new ProfileDTO().setName("name1")));
         Duration duration = Duration.NORMAL;
         List<Theme> themes = Arrays.asList(Theme.ANNEES_60, Theme.ANNEES_70);
         List<Effect> effects = Arrays.asList(Effect.NONE, Effect.SPEED);
         
-        Game gameUn = new Game(new HashSet<>(players), duration, themes, effects, ConnectionMode.OFFLINE, roundContentProperties);
+        Game gameUn = new Game(players, duration, themes, effects, ConnectionMode.OFFLINE, roundContentProperties);
         Assert.assertEquals( "players=[" + players.get(0) + ", "+ players.get(1) + "], duration=NORMAL, themes=[ANNEES_60, ANNEES_70], effects=[NONE, SPEED]" +
-                ", connectionMode=OFFLINE, listenedMusics={}, nbMusicsPlayed=0, nbMusicsPlayedInRound=0, round=CLASSIC, roundContent={nbMusics=20, nbPointWon=100}", gameUn.toString() );
+                ", connectionMode=OFFLINE, listenedMusics=null, nbMusicsPlayed=0, nbMusicsPlayedInRound=0, round=CLASSIC, roundContent={nbMusics=20, nbPointWon=100}", gameUn.toString() );
     }
     
     @Test
     public void incrementListenedMusics() {
         
         List<Player> players = Arrays.asList(
-                new Player(new ProfileDTO("name")),
-                new Player(new ProfileDTO("name1")));
+                new Player(new ProfileDTO().setName("name")),
+                new Player(new ProfileDTO().setName("name1")));
         Duration duration = Duration.NORMAL;
         
-        Game game = new Game(new HashSet<>(players), duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
+        Game game = new Game(players, duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
         
         game.incrementListenedMusics(Theme.ANNEES_60);
         Map<Theme, Integer> foundMusics = game.getListenedMusics();
-        Assert.assertEquals( new Integer(1), foundMusics.get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(1), foundMusics.get(Theme.ANNEES_60) );
         
         game.incrementListenedMusics(Theme.ANNEES_60);
         foundMusics = game.getListenedMusics();
-        Assert.assertEquals( new Integer(2), foundMusics.get(Theme.ANNEES_60) );
+        Assert.assertEquals( Integer.valueOf(2), foundMusics.get(Theme.ANNEES_60) );
     }
     
     @Test
     public void nextStep() {
         
         List<Player> players = Arrays.asList(
-                new Player(new ProfileDTO("name")),
-                new Player(new ProfileDTO("name1")));
+                new Player(new ProfileDTO().setName("name")),
+                new Player(new ProfileDTO().setName("name1")));
         Duration duration = Duration.NORMAL;
         
-        Game game = new Game(new HashSet<>(players), duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
+        Game game = new Game(players, duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
         Assert.assertEquals( players.size(), game.getPlayers().size() );
         Assert.assertEquals( duration, game.getDuration() );
         Assert.assertEquals( 0, game.getNbMusicsPlayed() );
@@ -183,11 +121,11 @@ public class GameTest extends AbstractTest {
     public void isFirstStep() {
         
         List<Player> players = Arrays.asList(
-                new Player(new ProfileDTO("name")),
-                new Player(new ProfileDTO("name1")));
+                new Player(new ProfileDTO().setName("name")),
+                new Player(new ProfileDTO().setName("name1")));
         Duration duration = Duration.NORMAL;
         
-        Game game = new Game(new HashSet<>(players), duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
+        Game game = new Game(players, duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
         Assert.assertTrue( game.isFirstStep() );
         
         while ( !game.isFinished() ) {
@@ -202,11 +140,11 @@ public class GameTest extends AbstractTest {
     public void isLastStep() {
         
         List<Player> players = Arrays.asList(
-                new Player(new ProfileDTO("name")),
-                new Player(new ProfileDTO("name1")));
+                new Player(new ProfileDTO().setName("name")),
+                new Player(new ProfileDTO().setName("name1")));
         Duration duration = Duration.NORMAL;
         
-        Game game = new Game(new HashSet<>(players), duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
+        Game game = new Game(players, duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
         Assert.assertFalse( game.isLastStep() );
         
         for (int i = 0; i < 80; i++) {
@@ -225,11 +163,11 @@ public class GameTest extends AbstractTest {
     public void isFinished() {
         
         List<Player> players = Arrays.asList(
-                new Player(new ProfileDTO("name")),
-                new Player(new ProfileDTO("name1")));
+                new Player(new ProfileDTO().setName("name")),
+                new Player(new ProfileDTO().setName("name1")));
         Duration duration = Duration.NORMAL;
         
-        Game game = new Game(new HashSet<>(players), duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
+        Game game = new Game(players, duration, null, null, ConnectionMode.OFFLINE, roundContentProperties);
         int nbMusic = 0;
         
         game.nextStep(roundContentProperties);
