@@ -4,7 +4,6 @@ import com.myssteriion.blindtest.AbstractTest;
 import com.myssteriion.blindtest.model.common.GoodAnswer;
 import com.myssteriion.blindtest.model.common.Theme;
 import com.myssteriion.blindtest.model.dto.ProfileDTO;
-import com.myssteriion.utils.test.TestUtils;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -13,33 +12,10 @@ import java.util.Map;
 public class PlayerTest extends AbstractTest {
     
     @Test
-    public void constructor() {
-        
-        String name = "name";
-        ProfileDTO profile = new ProfileDTO(name);
-        
-        
-        try {
-            new Player(null);
-            Assert.fail("Doit lever une IllegalArgumentException car un champ est KO.");
-        }
-        catch (IllegalArgumentException e) {
-            TestUtils.verifyException(new IllegalArgumentException("Le champ 'profile' est obligatoire."), e);
-        }
-        
-        
-        Player player = new Player(profile);
-        Assert.assertEquals( profile, player.getProfile() );
-        Assert.assertEquals( 0, player.getScore() );
-        Assert.assertEquals( 1, player.getRank() );
-        Assert.assertFalse( player.isLast() );
-    }
-    
-    @Test
     public void getterSetter() {
         
         String name = "name";
-        ProfileDTO profile = new ProfileDTO(name);
+        ProfileDTO profile = new ProfileDTO().setName(name);
         
         Player player = new Player(profile);
         Assert.assertEquals( profile, player.getProfile() );
@@ -57,13 +33,13 @@ public class PlayerTest extends AbstractTest {
     public void toStringAndEquals() {
         
         String name = "name";
-        ProfileDTO profile = new ProfileDTO(name);
+        ProfileDTO profile = new ProfileDTO().setName(name);
         Player playerUn = new Player(profile);
         
         Assert.assertEquals( "profile={" + profile + "}, score=0, rank=1, last=false, turnToChoose=false, teamNumber=-1, foundMusics={}", playerUn.toString() );
         
         Player playerUnIso = new Player(profile);
-        Player playerDeux = new Player(new ProfileDTO(name + "1"));
+        Player playerDeux = new Player(new ProfileDTO().setName(name + "1"));
         
         
         Assert.assertNotEquals(playerUn, null);
@@ -82,16 +58,16 @@ public class PlayerTest extends AbstractTest {
     public void incrementFoundMusics() {
         
         String name = "name";
-        ProfileDTO profile = new ProfileDTO(name);
+        ProfileDTO profile = new ProfileDTO().setName(name);
         Player player = new Player(profile);
         
         player.incrementFoundMusics(Theme.ANNEES_60, GoodAnswer.TITLE);
         Map<Theme, Map<GoodAnswer, Integer>> foundMusics = player.getFoundMusics();
-        Assert.assertEquals( new Integer(1), foundMusics.get(Theme.ANNEES_60).get(GoodAnswer.TITLE) );
+        Assert.assertEquals( Integer.valueOf(1), foundMusics.get(Theme.ANNEES_60).get(GoodAnswer.TITLE) );
         
         player.incrementFoundMusics(Theme.ANNEES_60, GoodAnswer.TITLE);
         foundMusics = player.getFoundMusics();
-        Assert.assertEquals( new Integer(2), foundMusics.get(Theme.ANNEES_60).get(GoodAnswer.TITLE) );
+        Assert.assertEquals( Integer.valueOf(2), foundMusics.get(Theme.ANNEES_60).get(GoodAnswer.TITLE) );
     }
     
 }
